try changing to java 17